fix z-index

--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -180,6 +180,7 @@
 
     nav {
       position: absolute;
+      z-index: 100;
       top: 69px;
       left: 50%;
       width: 100vw;
